# flood_segmentation

./: .gitignore  README.md
R/: README.md  install_packages.R
R/lib/: args.R  data.R  metrics.R  model.R  visualize.R
R/scripts/: evaluate.R  predict.R  train.R  train_quiet.sh
python/: README.md  pyproject.toml  requirements.txt
python/scripts/: download_dataset.py  evaluate.py  predict.py  train.py
python/src/floodseg/: __init__.py  dataset.py  metrics.py  model.py  visualize.py
